--- a/Accounting.RouterReporter/App.config
+++ b/Accounting.RouterReporter/App.config
@@ -15,6 +15,7 @@
     <add key="interval" value="10"/>
     <add key="perfCounterInterval" value="5"/>
     <add key="connectionString" value="Server=sqlserver.antvpn.io; Database=antvpn.accounting;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
+    <add key="connectionStringServer" value="Server=sqlserver.antvpn.io; Database=antvpn.servers;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
     <add key="connectionStringDc" value="Server=dc.antvpn.io; Database=ad;User ID=sa;Password=Woslaodaha0909;Connection Timeout=30;"/>
   </appSettings>
 </configuration>
